--- a/app/src/main/res/layout/hobby_category_parent_list.xml
+++ b/app/src/main/res/layout/hobby_category_parent_list.xml
@@ -2,7 +2,9 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="35dp">
+    android:layout_height="35dp"
+    android:layout_marginTop="5dp"
+    android:layout_marginBottom="5dp">
 
     <TextView
         android:id="@+id/tv_hobby_category_header"
