--- a/app/src/main/res/layout/frag_hobby.xml
+++ b/app/src/main/res/layout/frag_hobby.xml
@@ -41,8 +41,8 @@
                 android:layout_marginLeft="30dp"
                 android:layout_marginRight="30dp"
                 android:layout_weight="1"
-                android:background="@drawable/ic_baseline_star_24"
-                app:backgroundTint="#FFDF00" />
+                android:background="@drawable/bookmark"
+                app:backgroundTint="#000000" />
 
             <Button
                 android:id="@+id/btn_hotlist2"
@@ -51,8 +51,8 @@
                 android:layout_marginLeft="30dp"
                 android:layout_marginRight="30dp"
                 android:layout_weight="1"
-                android:background="@drawable/ic_baseline_star_24"
-                app:backgroundTint="#FFDF00" />
+                android:background="@drawable/bookmark"
+                app:backgroundTint="#000000" />
 
             <Button
                 android:id="@+id/btn_hotlist3"
@@ -61,8 +61,8 @@
                 android:layout_marginLeft="30dp"
                 android:layout_marginRight="30dp"
                 android:layout_weight="1"
-                android:background="@drawable/ic_baseline_star_24"
-                app:backgroundTint="#FFDF00" />
+                android:background="@drawable/bookmark"
+                app:backgroundTint="#000000" />
         </LinearLayout>
 
         <LinearLayout
@@ -79,8 +79,8 @@
                 android:layout_marginLeft="30dp"
                 android:layout_marginRight="30dp"
                 android:layout_weight="1"
-                android:background="@drawable/ic_baseline_star_24"
-                app:backgroundTint="#FFDF00" />
+                android:background="@drawable/bookmark"
+                app:backgroundTint="#000000" />
 
             <Button
                 android:id="@+id/btn_hotlist5"
@@ -89,8 +89,8 @@
                 android:layout_marginLeft="30dp"
                 android:layout_marginRight="30dp"
                 android:layout_weight="1"
-                android:background="@drawable/ic_baseline_star_24"
-                app:backgroundTint="#FFDF00" />
+                android:background="@drawable/bookmark"
+                app:backgroundTint="#000000" />
 
             <Button
                 android:id="@+id/btn_hotlist6"
@@ -99,8 +99,8 @@
                 android:layout_marginLeft="30dp"
                 android:layout_marginRight="30dp"
                 android:layout_weight="1"
-                android:background="@drawable/ic_baseline_star_24"
-                app:backgroundTint="#FFDF00" />
+                android:background="@drawable/bookmark"
+                app:backgroundTint="#000000" />
         </LinearLayout>
     </LinearLayout>
 
